--- a/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.scss
+++ b/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.scss
@@ -157,9 +157,9 @@ i{
   border: 2px solid $color-primary;
   padding: 5px;
   text-align: center;
-  background-color: white;
+  background-color: $color-primary;
   text-align: center;
-  color: $color-primary;
+  color: white;
   font-weight:500;
   cursor: pointer;
 }
