--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="rolUser !== 'Admistrador'">
+<!--<div *ngIf="rolUser !== 'Admistrador'">
   <p>No pueden ingresar</p>
-</div>
+</div> -->
 <div class="containerGestionUsuarios" *ngIf="rolUser == 'Administrador'" >
   <app-navegador></app-navegador>
   <div class="gestionUsuarios">
