--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.scss
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.scss
@@ -41,6 +41,7 @@ $color-gris-ligth:#DDD;
   border: none;
   border-radius: 5px;
   padding: 0.5rem;
+  cursor: pointer;
 }
 .fa-circle-plus{
   margin: 0 0.5rem;
@@ -105,6 +106,7 @@ input{
   box-shadow: 3px 3px 3px gray;
   padding: 0.5rem;
   margin-top: 0.5rem;
+  cursor: pointer;
 }
 
 // modal
@@ -187,6 +189,7 @@ tr:hover {
 
 .btnOpciones>i{
   margin-left: 0.5rem;
+  cursor: pointer;
 }
 .fa-pen-to-square{
   border:1px solid $color-edit;
