--- a/burgerQueen/src/styles.scss
+++ b/burgerQueen/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@1,200&display=swap');
+$color-melon: #f1d5bb;
+$color-marron: #3B2213;
+$color-pink: #FF8087;
+$color-naranja:#FB7614;
+$color-green: #31C248;
+$color-primary: #64b6e6;
 *{
     margin: 0;
     padding: 0;
